--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <title>文野環の大脱出プライバシーポリシー</title>
   </head>
   <body>
+    <h1>文野環の大脱出プライバシーポリシー</h1>
     本アプリでは、個人を特定する情報を扱いません。<br>
 
-  <h1>免責事項</h1>
+  <h2>免責事項</h2>
  利用上の不具合・不都合に対して可能な限りサポートを行っておりますが、利用者が本アプリを利用して生じた損害に関して、開発元は責任を負わないものとします。
 
   </body>
